client/src/styles/parts/Header.css
.root {
    border: 0 !important;
    border-radius: 0 !important;
    margin: 0 !important;
}

.wrapper {
    composes: ui container from 'semantic';
}

.menu {
    composes: ui large menu from 'semantic';
    border: 0 !important;
    border-radius: 0 !important;
}

.logo {
    margin-right: 15px !important;
}

.first-item {
    composes: header item from 'semantic';
    font-weight: normal !important;
}

.first-item:before {
    content: none !important;
}

.nickname {
    padding: 0 5px;
    font-weight: bold;
}

.item {
    composes: item from 'semantic';
}

.active {
    background-color: #00B5AD !important;
    color: #fff !important;
}

